# HabitTracker

./: .env_sample  .flake8  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: Ci-CdGuide.md  ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
tracker/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time.py  0004_alter_habit_chained_habit.py  0005_rename_is_nice_habbit_habit_is_nice_habit_and_more.py  0006_alter_habit_reward.py  0007_alter_habit_place_alter_habit_time.py  0008_alter_habit_periodicity_alter_habit_time_to_complete.py  0009_alter_habit_owner.py  0010_alter_habit_periodicity.py  0011_habit_last_notification.py  0012_alter_habit_last_notification.py  0013_alter_habit_last_notification.py  0014_alter_habit_periodicity.py  0015_alter_habit_periodicity.py
users/: models.py  permissions.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
